syntax = "proto3";

package dpa_rpc;

// This should be sent to topic dpa/command/<macaddrwithout:chars>/SetVni
// Example for topic: dpa/command/001122334455/SetVni

message SetVNI {
  DpaMetadata metadata = 1;
  PFVNI pf_info = 2;
}

message DpaMetadata {
  string dpa_id = 1;
  string host_id = 2;
  string revision = 3;
  string transaction = 4;
}

message PFVNI {
  int32 pf_id = 1;
  string mac = 2;
  int32 vni = 3;
  string subnet_ip = 4;
  int32 subnet_mask = 5;
  string dhcp_ip = 6;
  string host_ip = 7;
}
